[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/2D/Board2D/Board2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/2D/Timeline2D/Timeline2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Ui/RegularLabel/RegularLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Controller/ControllerPlayer/ControllerReactive/Controller2D/Game2D/TurnIndicator.gd" type="Script" id=4]
[ext_resource path="res://scenes/Controller/ControllerPlayer/ControllerReactive/Controller2D/Game2D/Game2D.gd" type="Script" id=5]
[ext_resource path="res://assets/turnIndicator/turnRed.png" type="Texture" id=6]
[ext_resource path="res://assets/audio/sfx/kenney_metalLatch.ogg" type="AudioStream" id=7]
[ext_resource path="res://scenes/2D/InGameSettings/Settings.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Ui/LeatherButton/RedButtonMedium.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Ui/Dialog/Dialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/nine_patches/pawn_carpet.png" type="Texture" id=11]
[ext_resource path="res://scenes/Controller/ControllerPlayer/ControllerReactive/Controller2D/Game2D/Carpet.gd" type="Script" id=12]
[ext_resource path="res://scenes/Controller/ControllerPlayer/ControllerReactive/Controller2D/Game2D/TileCrosshair.gd" type="Script" id=13]
[ext_resource path="res://resources/tile_crosshairs/move.tres" type="SpriteFrames" id=14]

[node name="Game2D" type="Node"]
script = ExtResource( 5 )

[node name="Dialogs" type="Node" parent="."]

[node name="Stack" type="Node" parent="."]

[node name="Board" parent="." instance=ExtResource( 1 )]

[node name="CarpetLayer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carpet" type="MarginContainer" parent="CarpetLayer"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 96.0
margin_top = 236.0
margin_right = 204.0
margin_bottom = 280.0
rect_min_size = Vector2( 108, 42 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="CarpetLayer/Carpet"]
margin_right = 108.0
margin_bottom = 44.0
texture = ExtResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="CarpetLayer/Carpet"]
margin_left = 5.0
margin_top = 1.0
margin_right = 103.0
margin_bottom = 42.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 13
custom_constants/margin_top = 12
custom_constants/margin_left = 9
custom_constants/margin_bottom = 13

[node name="HBoxContainer" type="HBoxContainer" parent="CarpetLayer/Carpet/MarginContainer"]
margin_left = 9.0
margin_top = 12.0
margin_right = 85.0
margin_bottom = 28.0
custom_constants/separation = 4

[node name="Slot1" type="CenterContainer" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Control" type="Control" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot1"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="Label" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot1" instance=ExtResource( 3 )]
margin_left = 6.0
margin_top = 2.0
margin_right = 10.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.156863, 0.207843, 0.25098, 1 )
text = "1"
align = 1

[node name="Slot2" type="CenterContainer" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Control" type="Control" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="Label2" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot2" instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 2.0
margin_right = 11.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.156863, 0.207843, 0.25098, 1 )
text = "2"
align = 1

[node name="Slot3" type="CenterContainer" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Control" type="Control" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot3"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="Label2" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot3" instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 2.0
margin_right = 11.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.156863, 0.207843, 0.25098, 1 )
text = "3"
align = 1

[node name="Slot4" type="CenterContainer" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )

[node name="Control" type="Control" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot4"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="Label2" parent="CarpetLayer/Carpet/MarginContainer/HBoxContainer/Slot4" instance=ExtResource( 3 )]
margin_left = 5.0
margin_top = 2.0
margin_right = 11.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.156863, 0.207843, 0.25098, 1 )
text = "4"
align = 1

[node name="HighlightsBottom" type="Node2D" parent="."]

[node name="TileCrosshair" type="AnimatedSprite" parent="HighlightsBottom"]
position = Vector2( 192, -16 )
frames = ExtResource( 14 )
frame = 1
playing = true
script = ExtResource( 13 )
kind = 2

[node name="Sides" type="Node" parent="."]

[node name="Timeline" parent="." instance=ExtResource( 2 )]

[node name="HighlightsTop" type="Node2D" parent="."]

[node name="TileCrosshair" type="AnimatedSprite" parent="HighlightsTop"]
position = Vector2( 192, -16 )
frames = ExtResource( 14 )
frame = 1
playing = true
script = ExtResource( 13 )
kind = 2

[node name="ExtraIndicators" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="VBoxContainer" parent="ExtraIndicators"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnIndicator" type="CenterContainer" parent="ExtraIndicators/Top"]
margin_right = 640.0
margin_bottom = 19.0
script = ExtResource( 4 )
side1Name = "Side1"
side2Name = "Side2"
side = 2

[node name="TextureRect" type="TextureRect" parent="ExtraIndicators/Top/TurnIndicator"]
margin_left = 263.0
margin_right = 377.0
margin_bottom = 19.0
texture = ExtResource( 6 )

[node name="LabelContainer" type="MarginContainer" parent="ExtraIndicators/Top/TurnIndicator"]
margin_left = 287.0
margin_top = 2.0
margin_right = 353.0
margin_bottom = 17.0
custom_constants/margin_top = 3

[node name="Label" parent="ExtraIndicators/Top/TurnIndicator/LabelContainer" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 15.0
text = "Side2's turn"

[node name="SkipContainer" type="CenterContainer" parent="ExtraIndicators/Top"]
visible = false
margin_top = 23.0
margin_right = 640.0
margin_bottom = 38.0

[node name="RedButtonMedium" parent="ExtraIndicators/Top/SkipContainer" instance=ExtResource( 9 )]
margin_left = 292.0
margin_right = 347.0
label = "End turn"

[node name="Label" parent="ExtraIndicators/Top/SkipContainer/RedButtonMedium" index="1"]
margin_left = 4.0
margin_right = 51.0
text = "End turn"

[node name="Settings" parent="." instance=ExtResource( 8 )]

[node name="Dialog" parent="." instance=ExtResource( 10 )]
visible = false
dname = ""
text = ""
character = ""

[node name="AudioClues" type="Node" parent="."]

[node name="TurnPasses" type="AudioStreamPlayer2D" parent="AudioClues"]
position = Vector2( 320.663, 39.3366 )
stream = ExtResource( 7 )
volume_db = 14.857
pitch_scale = 0.49
bus = "Sfx"
[connection signal="tile_clicked" from="Board" to="." method="_on_Board_tile_clicked"]
[connection signal="tile_hovered" from="Board" to="." method="_on_Board_tile_hovered"]
[connection signal="tile_not_hovered" from="Board" to="." method="_on_Board_tile_not_hovered"]
[connection signal="pressed" from="ExtraIndicators/Top/SkipContainer/RedButtonMedium" to="." method="_on_RedButtonMedium_pressed"]
[connection signal="okPressed" from="Dialog" to="." method="_on_Dialog_okPressed"]

[editable path="ExtraIndicators/Top/SkipContainer/RedButtonMedium"]
